...

    <string name="label_profile">Profil</string>
    <string name="label_statistics">Historique parties</string>
    <string name="label_logout">Déconnexion</string>
    <string name="label_about">À propos</string>

    <string name="category1">Calcul mental</string>
    <string name="category2">Mot du jour</string>
    <string name="category3">Association d\'image</string>
    <string name="category4">Compléter la phrase</string>
    <string name="category5">Phonétique</string>
    <string name="category6">Grammaire</string>
    <string name="category7">Conjugaison</string>

    <string name="category1_description">Résoudre des calculs de tête</string>
    <string name="category2_description">Associer la définition au bon mot</string>
    <string name="category3_description">Trouver la bonne image</string>
    <string name="category4_description">Compléter la phrase</string>
    <string name="category5_description">Exercices de phonétique</string>
    <string name="category6_description">Exercices de grammaire</string>
    <string name="category7_description">Exercices de conjugaison</string>

    <string name="level1">Niveau 1</string>
    <string name="level2">Niveau 2</string>
    <string name="level3">Niveau 3</string>


    <string name="not_implemented">Pas encore implémenté</string>
    <string name="timer">%d</string>
    <string name="correct">Correct</string>
    <string name="wrong">Incorrect</string>
...
    <string name="score_percent">%d%%</string>
    <string name="button_leave_score">OK</string>

    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>

    <string name="action_settings">Paramètres</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_name">Prénom</string>
    <string name="prompt_age">Âge</string>
...
