<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:title="@string/label_profile" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics_black_24dp"
            android:title="@string/label_statistics" />
        <item
            android:id="@+id/nav_questions"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/nav_questions" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/label_about" />
        <item
        android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/label_logout" />
    </group>

</menu>
